--- a/src/gui/BookLoanFrame.form
+++ b/src/gui/BookLoanFrame.form
@@ -54,10 +54,10 @@
                                       </Group>
                                       <Component id="bookSearchTextField" min="-2" pref="261" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="verifyStudentButton" max="32767" attributes="0"/>
-                                      <Component id="searchBookButton" min="-2" pref="71" max="-2" attributes="0"/>
+                                      <Component id="searchBookButton" max="32767" attributes="0"/>
+                                      <Component id="verifyStudentButton" pref="83" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
